@@ -1,5 +1,5 @@
-[ ] Split OSA.app() in OSA.app_with_name(), OSA.app_with_bundle_id(), 
-    OSA.app_with_signature() and implement them.
+[X] Split OSA.app() in OSA.app_with_name(), OSA.app_with_bundle_id(), 
+    OSA.app_with_signature() OSA.app_with_path and implement them.
 [ ] Investigate unrecognized types.
 [ ] Check type consistency of given method args.
 [ ] Rewrite the sdef parser using native libxml2 code.
